# ics-to-datasette

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build_and_publish.yml
ics_to_datasette/: __init__.py
