[tool.poetry]
name = "ics-to-datasette"
version = "0.1.0"
description = ""
authors = ["Michael Bianco <mike@mikebian.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ics = "^0.7.2"
click = "^8.1.7"
sqlite-utils = "^3.35.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
